# unified-vault-format

./: .gitignore  CLAUDE.md  LICENSE  README.md
.github/workflows/: demos.yml  publish-nuget.yml  release.yml
Audit/: AUDIT-PLAN.md  AUDIT-RESULT.md  README.md
Audit/Audit-2026-06-19/: ACTIONS-TAKEN.md  AUDIT-PLAN.md  AUDIT-RESULT.md
Bindings/include/: titan_vault.h
BuildScripts/: README.md  build.ps1  build.sh
BuildScripts/Scripts/: README.md  build-all.ps1  build-aot.ps1  build-clean.ps1  build-linux.ps1  build-macos.ps1  build-master.ps1  build-simple.ps1  build-titanvault-aot.ps1  build-windows.ps1  package-bindings.ps1  resolve-storagelib-simple.ps1  resolve-storagelib.ps1  test-aot-clean.ps1  test-aot-simple.ps1  test-aot-working.ps1
Demo/: README.md
Demo/Cpp/: .gitignore  CMakeLists.txt  README.md  vault_demo.cpp
Demo/Dart/: .gitignore  README.md  pubspec.yaml
Demo/DotNet/: DotNetDemo.csproj  Program.cs  README.md  nuget.config
Demo/Go/: .gitignore  README.md  go.mod  lib_unix.go  lib_windows.go  main.go
Resources/: AOT_building.txt  API.txt  Binding-Architecture.txt  CryptorDecorator going method wise.txt  Exported-methods.txt  New architecture3.txt  New archtitecture.txt  OtherLanguagesWrappers.txt  Separation-of-projects.txt  Slow-LocalStorage-WriteSpeed.txt  Summary-2025-06-25.txt  Summary-for-AI-AOT.txt  UVF-Overview-for-AI.txt  UVF-implementation-plan-for-newest.txt  cursor_parameters_for_multiuseruvfdemo.md
Uvf.Net/: TestDecoratorOpen.cs  Uvf.Net.sln
UvfLib.Storage/: VaultManager.cs
UvfLib.Tests/: NameShorteningTests.cs
(+428 files in other folders)
